# _____     ___ ____     ___ ____
#  ____|   |    ____|   |        | |____|
# |     ___|   |____ ___|    ____| |    \    PS2DEV Open Source Project.
#-----------------------------------------------------------------------
# Copyright 2001-2004, ps2dev - http://www.ps2dev.org
# Licenced under Academic Free License version 2.0
# Review ps2sdk README & LICENSE files for further details.
#
# $Id$

2005-06-12
  - oopo, added draw library
  - pixel, added erl feature - dynamic library

2005-05-18
  - linuzappz, added timrman stub (.h/.S at iop kernel)

2005-04-28
  - pixel and neofar, added chdir and tweaked fopen

2005-04-24
  - gawd, added audsrv

2005-04-17
  - oopo, added packet library

2005-04-03
  - tyranid, added getsyscall

2005-03-20
  - pixel, added a new bin2o in pure C
  - oopo, added math3d library

2005-03-17
  - oopo, added dma library
  - oopo, added simple graph library

2005-02-09
  - herben, better locking into iopcontrol to check init after reboot.

2005-02-07
  - herben, added section alignment for .ctors and .dtors sections.
  - herben, fixed dread in iomanX.

2005-02-04
  - pixel, split the libcdvd into .o files.

2005-02-01
  - Neil Stevens, fixed samples/Makefile.eeglobal_sample's link order.

2005-01-27
  - oopo, added an install target.
  - herben, fixed dev9's hardware registers.

2005-01-20
  - herben, added SifExitRpc to SifRebootIop
  - drakonite, added scr_setXY, scr_getX, scr_getY and scr_clear

2005-01-18
  - herben, fixed various strncpy bugs

2005-01-13
  - pixel, added simple ctype for IOP
  - pixel, made AHX beeing usable :)

2005-01-12
  - pixel, created alloc.irx

2005-01-11
  - pixel, renamed RFU060 and RFU061 to SetupThread and SetupHeap.
  - pixel, introduced locking in the sdk, to fix issues with malloc.

2005-01-10
  - pixel, definitively (?) fixed xprintf's signed/unsigned printouts.

2005-01-05
  - pixel, fixed realloc's alignment bug.
  - pixel, added timer.h
  - kaylakaze, fixed some iop's makefiles.